# aigit

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai_cmd.rs  config_cmd.rs  git_cmd.rs  mod.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/git/: branch.rs  commit.rs  diff.rs  mod.rs  remote.rs  repo.rs  status.rs
src/components/common/: ErrorBoundary.tsx  Icons.tsx  MarkdownRenderer.tsx  Toaster.tsx
src/components/git/: BranchGraph.tsx  CommitPanel.tsx  DiffViewer.tsx  FileStatusList.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TabBar.tsx
src/components/settings/: PromptEditor.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/pages/: BranchesView.tsx  ChangesView.tsx  ChatView.tsx  ReviewView.tsx  SettingsView.tsx
src/services/: ai.ts  config.ts  git.ts
src/stores/: aiStore.ts  repoStore.ts  toastStore.ts
src/types/: index.ts
src/utils/: dialog.ts  env.ts  error.ts
